Update ASM Library from version 3.1 to 6.2 #2